clusters/lab/cloudbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  selector:
    app.kubernetes.io/name: cloudbeaver
  ports:
    - name: http
      port: 80
      targetPort: http
